--- a/src/page/Chat/ChatStyle.css
+++ b/src/page/Chat/ChatStyle.css
@@ -57,3 +57,35 @@
 .custom-scroll::-webkit-scrollbar-track {
     background-color: #f1f1f1; /* Màu nền của thanh cuộn */
 }
+
+/* Chat ai */
+/* Hiệu ứng ba dấu chấm nhấp nháy */
+@keyframes dotFlashing {
+    0% { opacity: 1; }
+    50% { opacity: 0.3; }
+    100% { opacity: 1; }
+}
+
+.dot-flashing {
+    display: flex;
+    align-items: center;
+    gap: 4px; /* Khoảng cách giữa các dấu chấm */
+}
+
+.dot-flashing span {
+    width: 8px;
+    height: 8px;
+    background-color: gray;
+    border-radius: 50%;
+    display: inline-block;
+    animation: dotFlashing 1.4s infinite;
+}
+
+.dot-flashing span:nth-child(2) {
+    animation-delay: 0.2s;
+}
+
+.dot-flashing span:nth-child(3) {
+    animation-delay: 0.4s;
+}
+
